Changelog:
==========

1.71.0 - 2012-??-??

    Updated MediaInfo to 0.7.60

1.70.1 - 2012-08-31

    Packaging fix (Windows only)

1.70.0 - 2012-08-31

    Add new default web video engine: FFMpeg Web Video
    Add support for new web protocols: mmsh:// and mmst://
    Sort files alphanumerically by default e.g. Episode 2 before Episode 10
    Auto encoding detection of non UTF-8 external subtitles for Russian, Greek, Hebrew, Chinese, Korean and Japanese languages (leave "Subtitles codepage" option blank)
    Improved handling of UTF-8 external subtitles
    Localized #--TRANSCODE--# folder name
    PMS.conf:
        - Added transcode_folder_name option to allow #--TRANSCODE--# folder name to be customized (issue GC963)
    Make example PMS.conf behave more like built-in defaults
    Restore maximum buffer size to 600 MB (was 400 MB)
    Prevented image distortion on some DLNA clients with "Keep AC-3 track" option enabled
    Don't show entries for disabled engines in #--TRANSCODE--# folder
    Allow Traces tab panel to auto-scroll (thanks, LordQuackstar!)
    Revert changes to SMP-N100.conf that conflict with Sony Blu-ray players and break MKV support (thanks, mrw1986)
    Replaced ImageMagick with Thumbnailator for thumbnail generation
    Fix FFmpeg engine's handling of unsupported custom options (thanks, ajamess)
    Fixed FFmpeg command line arguments used by tsMuxeR video
    Added new renderer: Yamaha RX-A1010 (thanks, merelin)
    Language updates:
        - Updated Dutch translation (thanks, leroy)
        - Updated Bulgarian translation (thanks, JORDITO)
    Fix DNLA 2114 errors when scanning non-readable subfolders with "hide empty folders" enabled
    Renderers:
        - Deprecate misnamed TranscodeVideo profile MPEGAC3: use MPEGPSAC3 instead
        - Document and clean up TranscodeVideo and TranscodeAudio profiles
    Linux tarball: fix "cannot find tsMuxeR" error
    MEncoder:
        - disable AC-3 remux if audio track has delay